docs/versioned_docs/version-4.8.0/api/Viewport.mdx
---
custom_edit_url: null
---

```ts
class Viewport
```

<div>

</div>

A component that manages viewport size

<div className="container">
  <div className="row mb-2"><div className="col col--6"><strong>Properties</strong></div><div className="col col--6"><strong>Methods</strong></div></div>
  <div className="row"><div className="col col--6"><a href="#element">element</a><br/><a href="#width">width</a><br/><a href="#height">height</a><br/><a href="#padding">padding</a></div><div className="col col--6"><a href="#setSize">setSize</a><br/><a href="#resize">resize</a></div></div>
</div>

## constructor
```ts
new Viewport(el)
```

<div>

</div>

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|el|HTMLElement|||A viewport element|

## Properties

### element {#element}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

A viewport(root) element

**Type**: HTMLElement

### width {#width}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

Viewport width, without paddings

**Type**: number

### height {#height}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

Viewport height, without paddings

**Type**: number

### padding {#padding}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

Viewport paddings

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|left|number|CSS `padding-left`|
|right|number|CSS `padding-right`|
|top|number|CSS `padding-top`|
|bottom|number|CSS `padding-bottom`|

## Methods

### setSize {#setSize}

<div>

</div>

Change viewport's size.<br />This will change the actual size of `.flicking-viewport` element by changing its CSS width/height property

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|size|object|✔️||New viewport size|
|size.width|number \| string|✔️||CSS string or number(in px)|
|size.height|number \| string|✔️||CSS string or number(in px)|

### resize {#resize}

<div>

</div>

Update width/height to the current viewport element's size

